--- a/App.config
+++ b/App.config
@@ -3,7 +3,9 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="QuanLyCuaHangDoAnNhanh.Properties.Settings.ConnectionString" connectionString="Data Source=Hy;Initial Catalog=QuanLyCuaHangDoAnNhanh;User ID=sa;Password=123456;TrustServerCertificate=True" providerName="System.Data.SqlClient" />
+        <add name="QuanLyQuanCaPhe.Properties.Settings.ConnectionString"
+            connectionString="Data Source=Hy;Initial Catalog=QuanLyQuanCafe;User ID=sa;Password=123456;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
