--- a/QuanLyQuanCaPhe.csproj
+++ b/QuanLyQuanCaPhe.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{1985404F-E5EF-43CB-819C-680E25956AC7}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>QuanLyCuaHangDoAnNhanh</RootNamespace>
-    <AssemblyName>QuanLyCuaHangDoAnNhanh</AssemblyName>
+    <RootNamespace>QuanLyQuanCaPhe</RootNamespace>
+    <AssemblyName>QuanLyQuanCaPhe</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -38,7 +38,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
+    <WarningLevel>5</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -50,7 +50,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>Restaurant.ico</ApplicationIcon>
+    <ApplicationIcon>CafeShop.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Azure.Core, Version=1.46.2.0, Culture=neutral, PublicKeyToken=92742159e12e44c8, processorArchitecture=MSIL">
@@ -453,6 +453,7 @@
     <None Include="Images\Icons\bill.png" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CafeShop.ico" />
     <Content Include="Images\Food And Drinks\7up.jpg" />
     <Content Include="Images\Food And Drinks\BanhKemDau.jpg" />
     <Content Include="Images\Food And Drinks\BanhKemSocola.png" />
@@ -497,7 +498,6 @@
     <Content Include="Images\Food And Drinks\Tiramisu.jpg" />
     <Content Include="Images\Food And Drinks\TraSuaNguyenVi.jpg" />
     <Content Include="Images\Food And Drinks\TraSuaTranChauDuongDen.jpg" />
-    <Content Include="Restaurant.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets')" />
