Add Food and drinks

--- a/QuanLyQuanCaPhe.csproj
+++ b/QuanLyQuanCaPhe.csproj
@@ -454,50 +454,59 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CafeShop.ico" />
-    <Content Include="Images\Food And Drinks\7up.jpg" />
-    <Content Include="Images\Food And Drinks\BanhKemDau.jpg" />
-    <Content Include="Images\Food And Drinks\BanhKemSocola.png" />
-    <Content Include="Images\Food And Drinks\BanhMatcha.jpg" />
-    <Content Include="Images\Food And Drinks\BurgerBo.jpg" />
-    <Content Include="Images\Food And Drinks\BurgerBoPhoMai.jpg" />
-    <Content Include="Images\Food And Drinks\BurgerGaCay.jpg" />
-    <Content Include="Images\Food And Drinks\BurgerGaCayPhoMai.jpg" />
-    <Content Include="Images\Food And Drinks\CanhGaSotCay.jpg" />
-    <Content Include="Images\Food And Drinks\CanhGaSotMatOng.jpg" />
-    <Content Include="Images\Food And Drinks\Coca.jpg" />
-    <Content Include="Images\Food And Drinks\Cupcake.jpg" />
-    <Content Include="Images\Food And Drinks\Donut.jpg" />
-    <Content Include="Images\Food And Drinks\DuiGaChien.jpg" />
-    <Content Include="Images\Food And Drinks\DuiGaChienMam.jpg" />
-    <Content Include="Images\Food And Drinks\GaVienChien.jpg" />
-    <Content Include="Images\Food And Drinks\GaVienChienPhoMai.jpg" />
-    <Content Include="Images\Food And Drinks\KemTuoi.jpg" />
-    <Content Include="Images\Food And Drinks\KhoaiTayChien.jpg" />
-    <Content Include="Images\Food And Drinks\KhoaiTayChienLacPhoMai.jpg" />
-    <Content Include="Images\Food And Drinks\KhoaiTayNghien.jpg" />
-    <Content Include="Images\Food And Drinks\MatchaLatte.jpg" />
-    <Content Include="Images\Food And Drinks\MiBo.jpg" />
-    <Content Include="Images\Food And Drinks\MiCay.jpg" />
-    <Content Include="Images\Food And Drinks\MiTronIndomie.jpeg" />
-    <Content Include="Images\Food And Drinks\MiTuongDen.jpg" />
-    <Content Include="Images\Food And Drinks\MiY.jpg" />
-    <Content Include="Images\Food And Drinks\MiYSotKem.jpg" />
-    <Content Include="Images\Food And Drinks\NuocCam.jpg" />
-    <Content Include="Images\Food And Drinks\NuocChanh.jpg" />
-    <Content Include="Images\Food And Drinks\NuocEpTao.jpg" />
-    <Content Include="Images\Food And Drinks\NuocLoc.jpg" />
-    <Content Include="Images\Food And Drinks\PhoMaiQue.jpg" />
-    <Content Include="Images\Food And Drinks\PizzaBo.jpg" />
-    <Content Include="Images\Food And Drinks\PizzaChicago.jpg" />
-    <Content Include="Images\Food And Drinks\PizzaHaiSan.jpg" />
-    <Content Include="Images\Food And Drinks\PizzaMargherita.jpg" />
-    <Content Include="Images\Food And Drinks\PizzaPepperonis.jpg" />
-    <Content Include="Images\Food And Drinks\SaladGa.jpg" />
-    <Content Include="Images\Food And Drinks\SaladRauCu.jpg" />
-    <Content Include="Images\Food And Drinks\SuaChua.jpg" />
-    <Content Include="Images\Food And Drinks\Tiramisu.jpg" />
-    <Content Include="Images\Food And Drinks\TraSuaNguyenVi.jpg" />
-    <Content Include="Images\Food And Drinks\TraSuaTranChauDuongDen.jpg" />
+    <Content Include="Images\FoodAndDrinks\Affogato.jpg" />
+    <Content Include="Images\FoodAndDrinks\Americano.jpg" />
+    <Content Include="Images\FoodAndDrinks\BacXiu.jpg" />
+    <Content Include="Images\FoodAndDrinks\BanhMiBoToi.jpg" />
+    <Content Include="Images\FoodAndDrinks\BanhMiChaBongTrungMuoi.jpg" />
+    <Content Include="Images\FoodAndDrinks\Brownie.jpg" />
+    <Content Include="Images\FoodAndDrinks\CaPheCotDua.jpg" />
+    <Content Include="Images\FoodAndDrinks\CaPheDenDa.jpg" />
+    <Content Include="Images\FoodAndDrinks\CaPheMuoi.jpg" />
+    <Content Include="Images\FoodAndDrinks\CaPheSuaDa.jpg" />
+    <Content Include="Images\FoodAndDrinks\CaPheTrung.jpeg" />
+    <Content Include="Images\FoodAndDrinks\Cappucino.jpg" />
+    <Content Include="Images\FoodAndDrinks\CaramelFreeze.jpeg" />
+    <Content Include="Images\FoodAndDrinks\ColdBrew.jpg" />
+    <Content Include="Images\FoodAndDrinks\ColdBrewCamSa.jpg" />
+    <Content Include="Images\FoodAndDrinks\Croissant.jpg" />
+    <Content Include="Images\FoodAndDrinks\DonutSocola.jpeg" />
+    <Content Include="Images\FoodAndDrinks\Espresso.jpg" />
+    <Content Include="Images\FoodAndDrinks\FlatWhite.jpg" />
+    <Content Include="Images\FoodAndDrinks\FreezeCaPheCaramel.png" />
+    <Content Include="Images\FoodAndDrinks\KemCheese.jpg" />
+    <Content Include="Images\FoodAndDrinks\KemTuoi.jpg" />
+    <Content Include="Images\FoodAndDrinks\Latte.jpeg" />
+    <Content Include="Images\FoodAndDrinks\Macaron.jpg" />
+    <Content Include="Images\FoodAndDrinks\MacchiatoCaramel.jpg" />
+    <Content Include="Images\FoodAndDrinks\MatchaFreeze.jpeg" />
+    <Content Include="Images\FoodAndDrinks\Mocha.png" />
+    <Content Include="Images\FoodAndDrinks\MousseChanhLeo.jpg" />
+    <Content Include="Images\FoodAndDrinks\NuocCamEp.jpg" />
+    <Content Include="Images\FoodAndDrinks\NuocChanhTuoi.jpeg" />
+    <Content Include="Images\FoodAndDrinks\NuocEpDua.jpg" />
+    <Content Include="Images\FoodAndDrinks\NuocEpTao.jpg" />
+    <Content Include="Images\FoodAndDrinks\RedVelvet.jpg" />
+    <Content Include="Images\FoodAndDrinks\Sandwich.jpg" />
+    <Content Include="Images\FoodAndDrinks\SinhToBo.jpg" />
+    <Content Include="Images\FoodAndDrinks\SinhToDau.jpg" />
+    <Content Include="Images\FoodAndDrinks\SinhToMangCau.jpg" />
+    <Content Include="Images\FoodAndDrinks\SinhToXoai.jpg" />
+    <Content Include="Images\FoodAndDrinks\SocolaDaXay.jpg" />
+    <Content Include="Images\FoodAndDrinks\Tiramisu.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraChanhMatOng.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraDaoCamSa.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraGung.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraMatOngHoaCuc.jpg" />
+    <Content Include="Images\FoodAndDrinks\TranChau.jpg" />
+    <Content Include="Images\FoodAndDrinks\TranChauDuongDen.jpg" />
+    <Content Include="Images\FoodAndDrinks\TranChauSoi.jpg" />
+    <Content Include="Images\FoodAndDrinks\TranChauTrang.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraOolongKemCheese.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraSuaMatcha.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraSuaSocola.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraSuaThaiXanh.jpg" />
+    <Content Include="Images\FoodAndDrinks\TraSuaTruyenThong.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets" Condition="Exists('packages\Microsoft.Data.SqlClient.SNI.6.0.2\build\net462\Microsoft.Data.SqlClient.SNI.targets')" />
